--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@inertiajs/inertia-vue3": "^0.5.2",
         "@popperjs/core": "^2.10.2",
         "bootstrap": "^5.1.3",
+        "notiflix": "^3.1.0",
         "vue": "^3.2.20"
     }
 }
